2005-06-29  Benhur Stein <benhur@inf.ufsm.br>
	* FileReader/PajeFileReader.h: changed file read chunk size to 1MB
	* PajeSimulator/PajeSimul.[hm]: use NSMapTable instead of NSDictionary
	  as simulation dispatch table
	* SpaceTimeViewer/STEntityTypeLayout.[hm]: set height for variables in
	  container, instead of variable types
	* SpaceTimeViewer/STEntityTypeLayoutController.[hm,gorm]: refactoring,
	  separation of layout editor classes
	* SpaceTimeViewer/STLayoutEditor.[hm]: new files
	* SpaceTimeViewer/GNUmakefile: add new files
	* SpaceTimeViewer/HierarchyRuler.m: remove names of variables from
	  ruler

2005-06-26  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/STController.m: workaround for GNUstep bug #13382

2005-06-25  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.m,
	  EntityTypeFilter/EntityTypeSelector.m, FieldFilter/FieldFilter.m,
	  ImbricationFilter/InsetLimit.m, ReductionFilter/BusyNode.m (-dealloc): remove items of NSPopUp
	* General/PajeEntity.[hm]: entityType and container are not retained;
	  document it
	* General/PajeType.[hm]: same, for source and destContainerType
	* OrderFilter/Order.m (-dealloc): release hierarchyBrowser
	* PajeEventDecoder/PajeEventDecoder.m: make sure values in
	  eventBeingDefined are properly released
	* PajeSimulator/PajeSimul.[hm]: remove unused variable "name"; release
	  NSInvocations
	* PajeSimulator/UserLink.[hm]: source and destContainer are not
	  retained
	* SpaceTimeViewer/DrawView+Drawing.m,
	  SpaceTimeViewer/DrawView+Finding.m,
	  SpaceTimeViewer/HierarchyRuler.m: remove unused variables
	* SpaceTimeViewer/DrawView.m [-removeFromSuperview]: remove tracking
	  rectangle
	* SpaceTimeViewer/STController.m (dealloc): release layoutController
	* SpaceTimeViewer/STEntityTypeLayout.m: changed default height for
	  variables to 60 points (was 6)
	* StatViewer/StatViewer.[hm]: removed "filter"variable (use self); 
	  remove items from popups
